@@ -1,3 +1,7 @@
+2014-03-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Do not try to find holding space when no
+	  holding disk are used.
+
 2014-03-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/bsdtcp-security.c: Make a non blocking connection.
 
